Commiting stream (html & css) pages and modifying introduction.html and style.css

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type="text/css" href="..\\css\\style.css">
 </head>
 <body>
-    <div class="imagem-fundo">
+    <div>
         <header> 
             <p id="links">Links:</p>
-            <a id="noticias" href="">Notícias</a>
-            <a id="streams" href="">Streams</a>
+            <a id="a1" href=""><span>Notícias</span></a>
+            <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         </header>
         <div id="title">
             <h1 id="titulo" align="center">GamersUnited</h1>
