--- a/html/introduction.html
+++ b/html/introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>GamersUnited</title>
-    <link rel="stylesheet" type="text/css" href="..\\css\\style.css">
+    <link rel="stylesheet" type="text/css" href="..\\css\\styleIntroduction.css">
 </head>
 <body>
     <div>
