Adicionando novas páginas e alguma mudanças

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -9,7 +9,7 @@
     <div>
         <header> 
             <p id="links">Links:</p>
-            <a id="a1" href=""><span>Notícias</span></a>
+            <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
             <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         </header>
         <div id="title">
@@ -17,7 +17,7 @@
         </div>
         <div id="meio">
             <h1 align ="center">Introdução</h1>
-            <p>Bem Vindo ao maior site de games do Brasil GamersUnited. Neste site você encontrar notícias e streamns dos melhores jogos como:</p>
+            <p>Bem Vindo ao maior site de games do Brasil GamersUnited. Neste site você encontrará notícias e streamns dos melhores jogos como:</p>
             <div class="imagem-jogo">
                 <img src="..\\img\\Cs.png"  >
             </div>
@@ -45,5 +45,4 @@
         </div>   
     </div>           
 </body>
-
 </html>
