--- a/html/menuNoticias.html
+++ b/html/menuNoticias.html
@@ -18,13 +18,10 @@
             <br>
             <p>Escolha seu gênero de jogo preferido e fique ligado, em todas as novidades, de seus jogos preferidos:</p>
             <ul>
-                <li><a href="">Shooter</a></li>
-                <li><a href="">MOBA</a></li>
-                <li><a href="">RPG</a></li>
+                <li><a href="shooterNoticias.html">Shooter</a></li>
+                <li><a href="mobaNoticias.html">MOBA</a></li>
+                <li><a href="">PUZZLE</a></li>
             </ul>
-            <div id="imagem">
-                <img src="..\\img\\bonfire.jpg" width= "300" height="200px">
-            </div>  
     </section>
 </body>
 
