Adding the Games menu and the 2048 game. Also standardizing the Header and added it to every page (not in newspage)

--- a/html/menuNoticias.html
+++ b/html/menuNoticias.html
@@ -1,7 +1,7 @@
 <html>
 <head lang="pt-br">
     <meta charset="utf-8">
-    <title>MenuNoticias</title>
+    <title>GamersUnited - Notícias</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleMenu.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
             <img src="..\\img\\icon.png" height="80" >
         </div>
         <div id="texto">
-            <h1>GamersUnitedNews</h1>
+            <h1>GamersUnited - Notícias</h1>
         </div>
     </header>
      <section>
