--- a/html/shooterNoticias.html
+++ b/html/shooterNoticias.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Shooter</title>
+    <title>GamersUnited - Shooter</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleNoticias.css">
 </head>
 <body>
