--- a/html/streams-eslcsgo.html
+++ b/html/streams-eslcsgo.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/streams.css">
+    <link rel="stylesheet" href="../css/header.css">
     <title>Gamers United - Streams</title>
 </head>
 <body>
+    <header style="margin-bottom: 12px;"> 
+        <a id="a0" href="introduction.html"><span>Menu</span></a>
+        <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
+        <a id="a2" href="streams-riot.html"><span>Streams</span></a>
+        <a id="a3" href="menuGames.html"><span>Games</span></a>
+    </header>
     <div class="main-frame">
         <div>
             <p class="titulo">Escolha a Stream que deseja: </p>
