--- a/html/introduction.html
+++ b/html/introduction.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>GamersUnited</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleIntroduction.css">
+    <link rel="stylesheet" type="text/css" href="..\\css\\header.css">
 </head>
 <body>
     <div>
-        <header> 
-            <p id="links">Links:</p>
+        <header style="margin-bottom: 12px;"> 
+            <a id="a0" href="introduction.html"><span>Menu</span></a>
             <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
             <a id="a2" href="streams-riot.html"><span>Streams</span></a>
+            <a id="a3" href="menuGames.html"><span>Games</span></a>
         </header>
         <div id="title">
             <h1 id="titulo" align="center">GamersUnited</h1>
