Turning everything (almost) responsive; Responsivillism

--- a/html/introduction.html
+++ b/html/introduction.html
@@ -5,6 +5,8 @@
     <title>GamersUnited</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleIntroduction.css">
     <link rel="stylesheet" type="text/css" href="..\\css\\header.css">
+    <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div>
@@ -19,7 +21,7 @@
         </div>
         <div id="meio">
             <h1 align ="center">Introdução</h1>
-            <p>Bem Vindo ao maior site de games do Brasil GamersUnited. Neste site você encontrará notícias e streamns dos melhores jogos como:</p>
+            <p>Bem Vindo ao maior site de games do Brasil GamersUnited. Neste site você encontrará notícias e streams dos melhores jogos como:</p>
             <div class="imagem-jogo">
                 <img src="..\\img\\Cs.png"  >
             </div>
