--- a/html/menuGames.html
+++ b/html/menuGames.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/menuGames.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
     <title>GamesUnited - Games</title>
 </head>
 <body>
