--- a/html/menuNoticias.html
+++ b/html/menuNoticias.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <title>GamersUnited - Notícias</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleMenu.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
     <header>
