--- a/html/mobaNoticias.html
+++ b/html/mobaNoticias.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>GamersUnited - MOBA</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleNoticias.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
     <section>
