--- a/html/streams-eslcsgo.html
+++ b/html/streams-eslcsgo.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/streams.css">
     <link rel="stylesheet" href="../css/header.css">
     <title>Gamers United - Streams</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
     <header style="margin-bottom: 12px;"> 
