Added more "Responsivilism" and modifying a little bit the menuNoticias. Also added the REFERENCES doc

--- a/html/mobaNoticias.html
+++ b/html/mobaNoticias.html
@@ -5,9 +5,16 @@
     <title>GamersUnited - MOBA</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleNoticias.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\header.css">
     <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
+    <header style="margin-bottom: 12px; min-width: 60%"> 
+        <a id="a0" href="introduction.html"><span>Menu</span></a>
+        <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
+        <a id="a2" href="streams-riot.html"><span>Streams</span></a>
+        <a id="a3" href="menuGames.html"><span>Games</span></a>
+    </header>
     <section>
         <div class="imagem">
             <img src="..\\img\\G2.jpg" width="400" height="250">
