--- a/html/shooterNoticias.html
+++ b/html/shooterNoticias.html
@@ -5,15 +5,23 @@
     <title>GamersUnited - Shooter</title>
     <link rel="stylesheet" type="text/css" href="..\\css\\styleNoticias.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\header.css">
     <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
+    <header style="margin-bottom: 12px; min-width: 60%"> 
+        <a id="a0" href="introduction.html"><span>Menu</span></a>
+        <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
+        <a id="a2" href="streams-riot.html"><span>Streams</span></a>
+        <a id="a3" href="menuGames.html"><span>Games</span></a>
+    </header>
+
     <section>
         <div class="imagem">
             <img src="..\\img\\NIP.jpeg" width="400" height="250">
         </div>
         <div class="texto">
-            <h1>NIP DERROTA CLOUD9; NA`VI PASSA FACIL PELA GIANTS NA BLAST</h1>
+            <h1>NIP DEFEAT CLOUD9; NA`VI WINS EASILY AGAISNT GIANTS IN BLAST</h1>
             <br>
             <p>NiP came back from 12-5 to beat Cloud9 16-14 on Nuke while Natus Vincere secured their second victory as they defeated Giants 16-4 on Dust2.</p>
         </div>
