Adicionadno ícone em todas as páginas e adicionando página de Puzzle

--- a/html/menuNoticias.html
+++ b/html/menuNoticias.html
@@ -2,6 +2,7 @@
 <head lang="pt-br">
     <meta charset="utf-8">
     <title>GamersUnited - Notícias</title>
+    <link rel="icon" href="..\\img\\iconSite.png">
     <link rel="stylesheet" type="text/css" href="..\\css\\styleMenu.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
@@ -29,7 +30,7 @@
             <ul>
                 <li><a href="shooterNoticias.html"><span>FPS</span></a></li>
                 <li><a href="mobaNoticias.html"><span>MOBA</span></a></li>
-                <li><a href=""><span>Puzzle</span></a></li>
+                <li><a href="puzzleNoticias.html"><span>Puzzle</span></a></li>
             </ul>
     </div>
 </body>
