--- a/html/introduction.html
+++ b/html/introduction.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>GamersUnited</title>
+    <link rel="icon" href="..\\img\\iconSite.png">
     <link rel="stylesheet" type="text/css" href="..\\css\\styleIntroduction.css">
     <link rel="stylesheet" type="text/css" href="..\\css\\header.css">
     <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
