--- a/html/menuGames.html
+++ b/html/menuGames.html
@@ -24,7 +24,7 @@
         </div>
         <div class="buttons">
             <button onclick="window.location.href='2048game.html'" class="button" style="vertical-align:middle"><span>2048</span></button>
-            <button onclick="window.location.href='---'" class="button" style="vertical-align:middle"><span>Pong</span></button>
+            <button onclick="window.location.href='pongGame.html'" class="button" style="vertical-align:middle"><span>Pong</span></button>
         </div> 
     </div>
 </body>
