Tradução da página de Notícias - FPS

--- a/html/shooterNoticias.html
+++ b/html/shooterNoticias.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>GamersUnited - Shooter</title>
+    <title>GamersUnited - FPS</title>
     <link rel="icon" href="..\\img\\iconSite.png">
     <link rel="stylesheet" type="text/css" href="..\\css\\styleNoticias.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,27 +22,27 @@
             <img src="..\\img\\NIP.jpeg" width="400" height="250">
         </div>
         <div class="texto">
-            <h1>NIP DEFEAT CLOUD9; NA`VI WINS EASILY AGAISNT GIANTS IN BLAST</h1>
+            <h1>NIP DERROTA CLOUD9; NA`VI GANHA FACILMENTE CONTRA GIANTS NA BLAST</h1>
             <br>
-            <p>NiP came back from 12-5 to beat Cloud9 16-14 on Nuke while Natus Vincere secured their second victory as they defeated Giants 16-4 on Dust2.</p>
+            <p>NiP virou de 12-5 para vencer Cloud9 de 16-14 na Nuke enquanto Natus Vincere garantiu a segunda vitória vencendo contra a Giants de 16-4 na Dust2.</p>
         </div>
         <hr>
         <div class="imagem">
             <img src="..\\img\\ENCE.jpeg" width="400" height="250">
         </div>
         <div class="texto">
-            <h1>ENCE DEFEAT ASTRALIS; GO 3-1 IN MADRID</h1>
+            <h1>ENCE DERROTA ASTRALIS E VAI 3-1 PARA MADRID</h1>
             <br>
-            <p>ENCE tied Astralis' record in the group stage ahead of the last round of play, 3-1, after defeating them on Dust2.</p>
+            <p>ENCE segurou o recorde da Astralis na fase de grupos no último jogo, 3-1, após vencerem na Dust2.</p>
         </div>
         <hr>
         <div class="imagem">
             <img src="..\\img\\FURIA.jpeg" width="400" height="250">
         </div>
         <div class="texto">
-            <h1>FURIA TAKE DOWN GHOST TO QUALIFY FOR ESL ONE COLOGNE</h1>
+            <h1>FURIA VENCE GHOST PARA SE QUALIFICAR PARA A ESL ONE COLOGNE</h1>
             <br>
-            <p>FURIA punched their ticket to ESL One Cologne after defeating Ghost 3-2 in the grand final of the North American qualifier.</p>
+            <p>FURIA conquistou seu passe livre para ESL One Cologne após derrotarem Ghost de 3-2 na grande final do North American qualifier.</p>
         </div>
     </section>
 </body>
