Só arrumando umas coisinhas

--- a/html/pongGame.html
+++ b/html/pongGame.html
@@ -10,6 +10,8 @@
 	<link rel="icon" href="..\\img\\iconSite.png">
 	<link rel="stylesheet" href="..\\css\\pong.css">
 	<link rel="stylesheet" href="..\\css\\header.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
 		<header style="margin-bottom: 12px; font-size: 16px;"> 
