--- a/html/2048game.html
+++ b/html/2048game.html
@@ -15,11 +15,12 @@
     <script src="../JS/2048game.js"></script>
     
     <!--The HTML, CSS, and JS is not offical. Source: http://2048game.com/ -->
-    <header style="margin-bottom: 12px; font-size: 16px;"> 
+    <header style="margin-bottom: 12px;"> 
         <a id="a0" href="introduction.html"><span>Menu</span></a>
         <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
         <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         <a id="a3" href="menuGames.html"><span>Games</span></a>
+        <a id="a4" href="../php/formularios.php"><span>Fomulários</span></a>
     </header>
     <div class="main-class">
         <div class="block-2048">
