--- a/html/menuGames.html
+++ b/html/menuGames.html
@@ -12,11 +12,12 @@
     <title>GamesUnited - Games</title>
 </head>
 <body>
-    <header style="margin-bottom: 12px"> 
+    <header style="margin-bottom: 12px;"> 
         <a id="a0" href="introduction.html"><span>Menu</span></a>
         <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
         <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         <a id="a3" href="menuGames.html"><span>Games</span></a>
+        <a id="a4" href="../php/formularios.php"><span>Fomulários</span></a>
     </header>
     <div class="main-frame">
         <div>
