--- a/html/pongGame.html
+++ b/html/pongGame.html
@@ -12,12 +12,13 @@
 	<link rel="stylesheet" href="..\\css\\header.css">
 </head>
 <body>
-		<header style="margin-bottom: 12px; font-size: 16px;"> 
-				<a id="a0" href="introduction.html"><span>Menu</span></a>
-				<a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
-				<a id="a2" href="streams-riot.html"><span>Streams</span></a>
-				<a id="a3" href="menuGames.html"><span>Games</span></a>
-			</header>
+	<header style="margin-bottom: 12px;"> 
+        <a id="a0" href="introduction.html"><span>Menu</span></a>
+        <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
+        <a id="a2" href="streams-riot.html"><span>Streams</span></a>
+        <a id="a3" href="menuGames.html"><span>Games</span></a>
+        <a id="a4" href="../php/formularios.php"><span>Fomulários</span></a>
+    </header>
 	<script>
 	var
 	/**
