--- a/html/streams-eslcsgo.html
+++ b/html/streams-eslcsgo.html
@@ -17,6 +17,7 @@
         <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
         <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         <a id="a3" href="menuGames.html"><span>Games</span></a>
+        <a id="a4" href="../php/formularios.php"><span>Fomulários</span></a>
     </header>
     <div class="main-frame">
         <div>
