--- a/html/menuNoticias.html
+++ b/html/menuNoticias.html
@@ -14,6 +14,7 @@
         <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
         <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         <a id="a3" href="menuGames.html"><span>Games</span></a>
+        <a id="a4" href="../php/formularios.php"><span>Fomulários</span></a>
     </header>
     <div id="header">
         <div id="icon">
