--- a/html/mobaNoticias.html
+++ b/html/mobaNoticias.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" type="text/css" href="..\\css\\responsive.css">
 </head>
 <body>
-    <header style="margin-bottom: 12px; min-width: 60%"> 
+    <header style="margin-bottom: 12px;"> 
         <a id="a0" href="introduction.html"><span>Menu</span></a>
         <a id="a1" href="menuNoticias.html"><span>Notícias</span></a>
         <a id="a2" href="streams-riot.html"><span>Streams</span></a>
         <a id="a3" href="menuGames.html"><span>Games</span></a>
+        <a id="a4" href="../php/formularios.php"><span>Fomulários</span></a>
     </header>
     <section>
         <div class="imagem">
